--- a/src/main/frontend/src/styles/branchesDetail.css
+++ b/src/main/frontend/src/styles/branchesDetail.css
@@ -238,6 +238,14 @@
     background-color: var(--black-color);
 }
 
+.branchDetail_content .branchDetail_content_title .content {
+    font-size: 16px;
+    text-align: left;
+    font-weight: 400;
+    color: var(--black-color);
+    line-height: 1.74;
+}
+
 .branchDetail_content .branchDetail_content_title .btit {
     font-size: 24px;
     font-weight: 700;
